--- a/pom.xml
+++ b/pom.xml
@@ -16,12 +16,12 @@
     <properties>
         <aws-sdk.version>2.4</aws-sdk.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <tomcat.version>6.0.37</tomcat.version>
+        <tomcat.version>7.0.52</tomcat.version>
     </properties>
     <scm>
-        <connection>scm:git:git@github.com:werkshy/dynamo-session-manager.git</connection>
-        <developerConnection>scm:git:git@github.com:werkshy/dynamo-session-manager.git</developerConnection>
-        <url>git@github.com:werkshy/dynamo-session-manager.git</url>
+        <connection>scm:git:git@github.com:energyhub-dev/dynamo-session-manager.git</connection>
+        <developerConnection>scm:git:git@github.com:energyhub-dev/dynamo-session-manager.git</developerConnection>
+        <url>git@github.com:energyhub-dev/dynamo-session-manager.git</url>
     </scm>
     <licenses>
         <license>
@@ -37,14 +37,14 @@
         </dependency>
         <dependency>
             <groupId>org.apache.tomcat</groupId>
-            <artifactId>catalina</artifactId>
+            <artifactId>tomcat-catalina</artifactId>
             <version>${tomcat.version}</version>
             <type>jar</type>
             <scope>provided</scope>
         </dependency>
         <dependency> <!-- Required for mocking some tomcat classes -->
             <groupId>org.apache.tomcat</groupId>
-            <artifactId>coyote</artifactId>
+            <artifactId>tomcat-coyote</artifactId>
             <version>${tomcat.version}</version>
             <type>jar</type>
             <scope>test</scope>
@@ -91,8 +91,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>2.3.2</version>
                 <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
                 </configuration>
             </plugin>
             <plugin>
